z-index issue?

--- a/posts/chris-clark/less/app.less
+++ b/posts/chris-clark/less/app.less
@@ -427,7 +427,7 @@ img {
         left: 0;
         width: 20px;
         height: 30px;
-        z-index: 20;
+        z-index: 22;
 
         a {
             font-size: 14px;
@@ -444,7 +444,8 @@ img {
             }
 
             @media @screen-tiny-above {
-               padding-left: 15px;
+                width: 40px;
+                padding-left: 15px;
             }
         }
     }
